--- a/QBasket_demo.csproj
+++ b/QBasket_demo.csproj
@@ -9,11 +9,21 @@
     <UseWindowsForms>true</UseWindowsForms>
     <Win32Resource />
     <Configurations>Debug;Release;QBasket_Nasa</Configurations>
+    <Nullable>warnings</Nullable>
+    <Company>Quartic Solutions, LLC</Company>
+    <Authors>Quartic Solutions, LLC</Authors>
+    <Product>QBasket_NASA_Demo</Product>
+    <Description>Q Imagery Basket demonstation using NASA GIBS.</Description>
+    <PackageIcon>quarticLogo.ico</PackageIcon>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
@@ -26,6 +36,10 @@
     <None Remove="Properties\PublishProfiles\**" />
     <None Remove="Save\**" />
     <None Remove="_Publish\**" />
+    <None Include="quarticLogo.ico">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
     <Page Remove="Properties\PublishProfiles\**" />
     <Page Remove="Save\**" />
     <Page Remove="_Publish\**" />
@@ -85,6 +99,8 @@
     <PackageReference Include="System.Globalization" Version="4.3.0" />
     <PackageReference Include="System.Threading.Tasks" Version="4.3.0" />
     <PackageReference Include="WindowsAPICodePack-Core" Version="1.1.2" />
+    <PackageReference Include="WiX" Version="3.11.2" />
+    <PackageReference Include="WiX.Toolset" Version="3.9.1208" />
   </ItemGroup>
 
   <ItemGroup>
